--- a/src/app/pages/publisher/publisher.page.html
+++ b/src/app/pages/publisher/publisher.page.html
@@ -95,6 +95,6 @@
     </ion-item>
 
     </ion-list>
-    <ion-button expand="block" color="danger" (click)="publishtool()">Publish tool</ion-button>
+    <ion-button expand="block" color="danger" (click)="publishtool()" disabled>Publish tool</ion-button>
   </div>
 </ion-content>
