--- a/src/app/pages/loginscreen/loginscreen.page.html
+++ b/src/app/pages/loginscreen/loginscreen.page.html
@@ -17,17 +17,17 @@
   <ion-card-content >
     
     <div class="wrapform">
-      <ion-item color="danger">
+      <ion-item color="white">
         <ion-label position="floating" >Email</ion-label>
-        <ion-input type="text"  [(ngModel)]="email"  >
+        <ion-input  type="text"  [(ngModel)]="email"  >
           
         </ion-input>
 
       </ion-item>
       
-      <ion-item color="danger">
+      <ion-item  color="white">
         <ion-label position="floating">Password</ion-label>
-        <ion-input type="password"  [(ngModel)]="password"  ></ion-input>
+        <ion-input  type="password"  [(ngModel)]="password"  ></ion-input>
 
       </ion-item>
       
