--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,9 +45,9 @@
       Home
       </ion-item >
 
-      <ion-item routerLink="/tabs">
+      <ion-item routerLink="/chat">
       <ion-icon name='book' slot='start'></ion-icon>
-      Kali Linux
+      Chat
       </ion-item >
 
       <ion-item routerLink="/videos">
