--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -1,9 +1,84 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>about</ion-title>
+<ion-header [translucent]="true">
+  <ion-toolbar color="danger">
+    <ion-title class="ion-align-items-center">About</ion-title>
+    <ion-buttons color="danger">
+      
+    </ion-buttons>
   </ion-toolbar>
+  
 </ion-header>
 
 <ion-content>
+  <ion-item-group>
+    <ion-item-divider>
+      <ion-label>Developer Name </ion-label>
+    </ion-item-divider>
+  
+    <ion-item>
+      <ion-label>Name: Kalebo Ruzuba Hans</ion-label>
+    </ion-item>
 
+    <ion-item>
+      <ion-label>Email: tgeniusclub@gmail.com</ion-label>
+    </ion-item>
+  <ion-item>
+    <ion-label>Tel: +25769945816</ion-label>
+  </ion-item>
+  
+    <ion-item>
+      <ion-label>blog: tgeniusclub.com</ion-label>
+    </ion-item>
+  </ion-item-group>
+  
+  <ion-item-group>
+    <ion-item-divider>
+      <ion-label>Tool Description</ion-label>
+    </ion-item-divider>
+  
+    <ion-item>
+      <ion-label>Tool name: DevTermux</ion-label>
+      
+    </ion-item>
+    <ion-item>
+      <ion-label>Tool version: 0.1v</ion-label>
+    </ion-item>
+  </ion-item-group>
+  
+  
+  <!-- They can also be used to group sliding items -->
+  <ion-item-group>
+    <ion-item-divider>
+      <ion-label>
+        Fruits
+      </ion-label>
+    </ion-item-divider>
+  
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>
+          <h3>Grapes</h3>
+        </ion-label>
+      </ion-item>
+      <ion-item-options>
+        <ion-item-option>
+          Favorite
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>
+          <h3>Apples</h3>
+        </ion-label>
+      </ion-item>
+      <ion-item-options>
+        <ion-item-option>
+          Favorite
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-item-group>
+  
+  
 </ion-content>
